// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calendar-base.ts should create a day list 1`] = `
Array [
  Object {
    "date": "2020-12-28",
    "day": 28,
    "future": false,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 12,
    "past": true,
    "present": false,
    "time": "",
    "weekday": 1,
    "year": 2020,
  },
  Object {
    "date": "2020-12-29",
    "day": 29,
    "future": false,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 12,
    "past": false,
    "present": true,
    "time": "",
    "weekday": 2,
    "year": 2020,
  },
  Object {
    "date": "2020-12-30",
    "day": 30,
    "future": true,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 12,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 3,
    "year": 2020,
  },
  Object {
    "date": "2020-12-31",
    "day": 31,
    "future": true,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 12,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 4,
    "year": 2020,
  },
  Object {
    "date": "2021-01-01",
    "day": 1,
    "future": true,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 1,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 5,
    "year": 2021,
  },
  Object {
    "date": "2021-01-02",
    "day": 2,
    "future": true,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 1,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 6,
    "year": 2021,
  },
  Object {
    "date": "2021-01-03",
    "day": 3,
    "future": true,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 1,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 0,
    "year": 2021,
  },
  Object {
    "date": "2021-01-04",
    "day": 4,
    "future": true,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 1,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 1,
    "year": 2021,
  },
  Object {
    "date": "2021-01-05",
    "day": 5,
    "future": true,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 1,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 2,
    "year": 2021,
  },
  Object {
    "date": "2021-01-06",
    "day": 6,
    "future": true,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 1,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 3,
    "year": 2021,
  },
  Object {
    "date": "2021-01-07",
    "day": 7,
    "future": true,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 1,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 4,
    "year": 2021,
  },
  Object {
    "date": "2021-01-08",
    "day": 8,
    "future": true,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 1,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 5,
    "year": 2021,
  },
]
`;

exports[`calendar-base.ts should generate classes 1`] = `
Object {
  "v-future": false,
  "v-outside": false,
  "v-past": false,
  "v-present": false,
}
`;

exports[`calendar-base.ts should generate classes with outside 1`] = `
Object {
  "v-future": false,
  "v-outside": true,
  "v-past": false,
  "v-present": false,
}
`;

exports[`calendar-base.ts should parse start & end 1`] = `
Object {
  "date": "2020-12-28",
  "day": 28,
  "future": false,
  "hasDay": true,
  "hasTime": false,
  "hour": 0,
  "minute": 0,
  "month": 12,
  "past": false,
  "present": false,
  "time": "",
  "weekday": 1,
  "year": 2020,
}
`;

exports[`calendar-base.ts should parse start & end 2`] = `
Object {
  "date": "2021-01-08",
  "day": 8,
  "future": false,
  "hasDay": true,
  "hasTime": false,
  "hour": 0,
  "minute": 0,
  "month": 1,
  "past": false,
  "present": false,
  "time": "",
  "weekday": 5,
  "year": 2021,
}
`;
